[workspace]
resolver = "2"
members = [
    "contracts/gate",
    "contracts/register",
    "contracts/ft-shim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
near-sdk = "5.26.1"
serde = { version = "1", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
