[package]
name = "gate"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
# Direct borsh dep (matches near-sdk 5.26.1's transitive version) so
# derive macros resolve `::borsh` without `#[borsh(crate = ...)]`. Kept
# per-crate instead of at workspace level because workspace-level borsh
# interacted badly with the nightly build-std path (produced wasm that
# failed NEAR VM's prepare step with CompilationError::Deserialization).
borsh = { version = "1.6", features = ["derive"] }
serde = { workspace = true }
# serde_json comes in transitively via near-sdk; we don't declare it
# directly because that also triggered the build-std wasm rejection.
# All usage goes through near_sdk::serde_json::* reexports.

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
# For generating test fixtures in unit tests. Lets us sign and verify real
# ed25519 signatures against the nep366 module without needing near-api-js.
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"
